Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122801

XR_EXT_UUID makes spatial anchors unsupported on Quest3 in XR (fix available)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.0 FF
    • 6.8.0
    • Quick: 3D
    • None
    • HW: Quest 3
      Firmware 0.62 (and public test channel 0.63, same behavior)
      Quest3 OpenXR SDK 0.62
    • Android
    • c49962b57 (dev)

    Description

      Encountered problem:

      commit: 11503161090f81b690c1682266478be29ce3feff 

      Made on Jan 26 by lagocs 

      This commit introduced the extra requirement for XR_EXT_UUID_EXTENSION_NAME inside OpenXRSpaceExtension.cpp

      However this is not a supported extension for the Quest3 as I have found out (on firmware 0.62 and 0.63, I cannot comment on prior firmwares as I cannot downgrade my quest3 firmware). This made m_spaceExtensionSupported allways false.

      Now if you still loaded the SpatialAnchorModel component in QML you would witness a crash (try it). That crash is a bit strange as it should be guarded against but oh well, not that important right now. 

      Confirmed Solution :

      By commenting this line 85:

      It will resolve m_spaceExtensionSupported as true and everything will work as normal  

      NOTE: make sure your app has spatial permissions inside the quest3, just putting the permission request in the android manifest was not enough for me. Whether the quest OS is throttling the permission requests I don't know but to be sure go to Privacy->spatial permissions and manually go to your installed app to enable the permission

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tvete Paul Olav Tvete
            felixvddonk Felix van de Donk
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes