Workaround for crash with XrSpatialAnchorModel on Quest 3

Spatial anchors are not currently supported, but at least it should not
crash.

Fixes: QTBUG-122801
Change-Id: I652861803995aa674f8f9214b140f0d5287f3819
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>